[Smart Lock] Make save prompt first run experience never appear.

BUG=610950

Review-Url: https://codereview.chromium.org/1967983002
Cr-Commit-Position: refs/heads/master@{#392883}

Former-commit-id: b065df589003a17094e96232455bc51f9515dad3